quite seccion contacto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
               <a href="#curriculum" onclick="seleccionar()">CURRICULUM</a>
             </li>
             <li><a href="#portfolio" onclick="seleccionar()">PORTFOLIO</a></li>
-            <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li>
+            <!-- <li><a href="#contacto" onclick="seleccionar()">CONTACTO</a></li> -->
           </ul>
         </nav>
         <div class="nav-responsive" onclick="mostrarOcultarMenu()">
@@ -257,6 +257,7 @@
               <p>
                 En 2023, inicié mi formación en el programa de C# .NET en Maxi Programa, centrándome especialmente en el desarrollo de aplicaciones de escritorio. A lo largo de este periodo, he adquirido habilidades especializadas que me permiten crear soluciones robustas y eficientes para entornos de escritorio. Actualmente, estoy expandiendo mi conocimiento participando en un curso de ASP.NET, con el objetivo de ampliar mis habilidades en el desarrollo web y mantenerme actualizado con las tecnologías más recientes en este ámbito.
               </p>
+              
               <div class="conectori">
                 <div class="circuloi"></div>
               </div>
@@ -300,12 +301,12 @@
       </div>
     </section>
     <!-- SECCION CONTACTO -->
-    <section id="contacto" class="contacto">
+    <!-- <section id="contacto" class="contacto">
       <div class="contenido-seccion">
         <h2>CONTACTO</h2>
-        <div class="fila">
+        <div class="fila"> -->
           <!-- FORMULARIO -->
-          <div class="col">
+         <!--  <div class="col">
             <input type="text" placeholder="Tú Nombre" />
             <input type="text" placeholder="Número Telefónico" />
             <input type="text" placeholder="Correo Electronico" />
@@ -321,9 +322,9 @@
               Enviar Mensaje <i class="fa-solid fa-paper-plane"></i>
               <span class="overlay"></span>
             </button>
-          </div>
+          </div> -->
           <!-- MAPA -->
-          <div class="col">
+          <!-- <div class="col">
             <img src="img/mapa.png" alt="" />
             <div class="info">
               <ul>
@@ -344,7 +345,8 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
+    
     <!-- FOOTER -->
     <footer>
       <a href="#inicio" class="arriba">
