Cambie color principal

--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
       <div class="contenido-seccion">
         <h2>Sobre Mí</h2>
         <p>
-          <span>Hola, soy Alvaro Leal Gei</span>, Lorem ipsum dolor sit amet
-          consectetur, adipisicing elit. Possimus est atque in eaque.
-          Blanditiis, excepturi, architecto minima provident voluptatum et
-          officiis, amet dolorum accusamus illo autem aliquam quas modi
-          suscipit!
+          <span>Hola, soy Alvaro Leal Gei</span>, tengo 23 años y soy de Mendoza, Argentina y soy desarrollador .NET Full Stack.
+           Comencé mi viaje en la programación en 2021 y desde entonces, he estado inmerso en el fascinante mundo del desarrollo.
+          En la actualidad, me encuentro especializándome en tecnologías .NET, abarcando tanto aplicaciones de escritorio como web.
+          Mi enfoque actual incluye aprender nuevas tecnologías y trabajar en proyectos personales que no solo expandan mis habilidades,
+          sino que también me acerquen a la oportunidad de asegurar mi primer trabajo en el campo de IT.
+          Estoy emocionado por el proceso de aprendizaje y desarrollo profesional, y ansío enfrentar nuevos desafíos en este apasionante camino de la programación.
         </p>
 
         <div class="fila">
@@ -249,7 +250,6 @@
                 <div class="circuloi"></div>
               </div>
             </div>
-
             <div class="item izq">
               <h4>Maxi Programa</h4>
               <span class="casa"> C# .Net</span>
