--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="contenedor-header">
       <header>
         <div class="logo">
-          <a href="#">Alvaro Leal Gei</a>
+          <a href="#inicio"><img src="img/logoSF.png" alt="logo" class="logo"></a>
         </div>
         <nav id="nav">
           <ul>
