Correccion de CV

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             <span class="overlay"></span>
           </button> -->
           <button>
-            <a href="archivo/CV_AlvaroLeal(ESP).pdf" download="CVAlvaroLealGei">
+            <a href="archivo/CvAlvaroLeal(ESP).pdf" download="CVAlvaroLealGei">
                 Descargar CV
                 <i class="fa-solid fa-download"></i>
             </a>
